fixed home content alignment

--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,9 @@ body{
     width: 100%;
     display: flex;
     height: auto;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 10px 10% 0;
+    padding: 50px;
 
 }
 
@@ -196,7 +196,7 @@ body{
     display: inline-flex;
     position: relative;
     max-width: 31.25rem;
-    margin-right: -6.25rem;
+    margin-right: 0rem;
     border-radius: 1.875rem;
     animation: zoomIn 1s ease forwards, floatImage 4s ease-in-out infinite; 
     animation-delay: 0.2s, 3s;
@@ -400,7 +400,9 @@ body{
     
 }
 
-@media screen and (max-width: 500px){
+@media only screen and (max-width: 500px)
+
+{
 
     .sound {
         margin-top: -1rem;
@@ -412,7 +414,7 @@ body{
         border-radius: 2.5rem;
         font-size: 1rem;
         letter-spacing: 1px;
-        position: static;
+        position: relative;
     
     }
     
@@ -587,3 +589,4 @@ body{
     }
 
 }
+
